@@ -2,6 +2,7 @@
 	* [!!!] Use namespacing
 	* [!!!] Remove TS-configured userFuncs in favor of hooks
 	* Resolves #71660: [!!!] Refactor, streamline and cleanup all scripts: all API changed
+	* Resolves #61659: Usergroups are removed on update
 
 2015-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #71286: [!!!] Remove xclass assignments
